--- a/freelance-chain/package.json
+++ b/freelance-chain/package.json
@@ -10,21 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/icons-material": "^6.4.2",
-    "@mui/material": "^6.4.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.11",
+    "@mui/material": "^6.4.11",
     "@react-oauth/google": "^0.12.1",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
-    "ethers": "^6.13.5",
+    "ethers": "^6.13.7",
+    "formik": "^2.4.6",
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-range": "^1.10.0",
-    "react-router-dom": "^7.3.0",
+    "react-router-dom": "^7.5.3",
     "recharts": "^2.15.2",
-    "web3": "^4.16.0"
+    "web3": "^4.16.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
