--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ NODE_ENV=development
 MONGO_URI=mongodb://localhost:27017/freelance-chain
 
 # Frontend URL
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://freelance-chain-m6q032ov0-laibas-projects-e61b3139.vercel.app
 
 # Blockchain Configuration
 RPC_URL=https://rpc-vanguard.vanarchain.com
