--- a/freelance-chain/.env
+++ b/freelance-chain/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://freelance-chain-production.up.railway.app
 VITE_CONTRACT_ADDRESS=0x19c5e8e78fc12F5381138A87ca30f87D08EE818e
